# TinyCrypto

./: .gitignore  CMakeLists.txt  LICENSE  README.md
TinyCrypto/cipher/aes/: aes_lut.cpp  aes_lut.h  test_aes_aesni.cpp  test_aes_lut.cpp
TinyCrypto/cipher/ballet/: ballet_standard.h  test_ballet_standard.cpp
TinyCrypto/cipher/des/: des_common.cpp  des_common.h
TinyCrypto/cipher/sm4/: sm4_lut.h  test_sm4_common.cpp
TinyCrypto/cipher/ublock/: ublock_common.cpp  ublock_standard.h
TinyCrypto/encoding/asn1/: asn1.cpp  asn1.h  test_asn1.cpp
TinyCrypto/encoding/base/: base64_chromium.cpp  base64_common.cpp  base64_common.h  test_base64.cpp  test_base64_common.cpp
TinyCrypto/encoding/str/: binary.cpp  test_binary.cpp  test_hexadecimal.cpp
TinyCrypto/hash/ghash/: ghash_common.cpp  ghash_pclmul.h  test_ghash.cpp
TinyCrypto/hash/md5/: md5_standard.h  test_md5_standard.cpp
TinyCrypto/hash/sha1/: sha1_shani.cpp  sha1_shani.h  sha1_standard.cpp  sha1_standard.h  test_sha1_shani.cpp  test_sha1_standard.cpp
TinyCrypto/hash/sha2/: sha2_shani.cpp  sha2_shani.h  sha2_standard.cpp  test_sha2_shani.cpp
TinyCrypto/hash/sm3/: sm3_fast.h
TinyCrypto/pkc/bn/: test_uint.cpp  test_uint256.cpp  test_uint256_mont.cpp  uint.cpp  uint.h  uint256.h  uint256_mont.cpp  uint_mont.h
TinyCrypto/pkc/sm2/: sm2p256v1.cpp  sm2p256v1.h  sm2p256v1_asn1.cpp  sm2p256v1_asn1.h  test_sm2p256v1_asn1.cpp
cipher/: README.md
cipher/aes/: aes_aesni.c  aes_aesni.cpp  aes_aesni.h  aes_lut.c  aes_lut.h  test_aes_aesni.c  test_aes_lut.c
cipher/ballet/: ballet_standard.cpp  ballet_standard.h
cipher/des/: test_des_common.cpp
cipher/sm4/: sm4_common.c  sm4_common.cpp  sm4_common.h  sm4_lut.c  sm4_lut.cpp  sm4_lut.h  test_sm4_common.c  test_sm4_lut.c  test_sm4_lut.cpp
cipher/ublock/: test_ublock_common.cpp  test_ublock_standard.c  test_ublock_standard.cpp  ublock_common.cpp  ublock_common.h  ublock_standard.c  ublock_standard.cpp  ublock_standard.h
docs/: cipher.md  encoding.md  hash.md  pkc.md
encoding/: README.md
encoding/base/: base64.cpp  base64.h  base64_avx2.cpp  base64_avx2.h  base64_chromium.cpp  base64_chromium.h  test_base64.cpp  test_base64_avx2.cpp  test_base64_chromium.cpp
encoding/str/: base64.cpp  base64.h  binary.h  hexadecimal.cpp  hexadecimal.h
hash/: README.md
hash/ghash/: ghash_common.c  ghash_common.h  ghash_lut256.c  ghash_lut256.cpp  ghash_lut256.h  ghash_pclmul.c  ghash_pclmul.cpp  ghash_pclmul.h  test_ghash.c
hash/md5/: md5_standard.c  md5_standard.cpp  md5_standard.h  test_md5_standard.c
hash/sha1/: sha1_standard.c  sha1_standard.cpp  sha1_standard.h  test_sha1_standard.c
hash/sha2/: sha2_standard.cpp  sha2_standard.h  test_sha2_standard.cpp
hash/sm3/: sm3_fast.c  sm3_fast.cpp  sm3_fast.h  test_sm3_fast.c  test_sm3_fast.cpp
pkc/: README.md
pkc/bn/: test_uint256_mont.cpp  uint.cpp  uint256.cpp  uint256_mont.cpp  uint256_mont.h
pkc/sm2/: sm2p256v1.h  test_sm2p256v1.cpp
